docs-archive/apache-airflow-providers-amazon/7.0.0/_sources/_api/airflow/providers/amazon/aws/utils/connection_wrapper/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.utils.connection_wrapper`
===============================================================

.. py:module:: airflow.providers.amazon.aws.utils.connection_wrapper


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.utils.connection_wrapper.AwsConnectionWrapper




.. py:class:: AwsConnectionWrapper(context=None)

   Bases: :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`

   AWS Connection Wrapper class helper.
   Use for validate and resolve AWS Connection parameters.

   ``conn`` reference to Airflow Connection object or AwsConnectionWrapper
       if it set to ``None`` than default values would use.

   The precedence rules for ``region_name``
       1. Explicit set (in Hook) ``region_name``.
       2. Airflow Connection Extra 'region_name'.

   The precedence rules for ``botocore_config``
       1. Explicit set (in Hook) ``botocore_config``.
       2. Construct from Airflow Connection Extra 'botocore_kwargs'.
       3. The wrapper's default value

   .. py:property:: extra_dejson

      Compatibility with `airflow.models.Connection.extra_dejson` property.


   .. py:property:: session_kwargs
      :type: dict[str, Any]

      Additional kwargs passed to boto3.session.Session.


   .. py:attribute:: conn
      :annotation: :dataclasses.InitVar[Connection | AwsConnectionWrapper | _ConnectionMetadata | None]

      

   .. py:attribute:: region_name
      :annotation: :str | None

      

   .. py:attribute:: botocore_config
      :annotation: :Config | None

      

   .. py:attribute:: verify
      :annotation: :bool | str | None

      

   .. py:attribute:: conn_id
      :annotation: :str | ArgNotSet | None

      

   .. py:attribute:: conn_type
      :annotation: :str | None

      

   .. py:attribute:: login
      :annotation: :str | None

      

   .. py:attribute:: password
      :annotation: :str | None

      

   .. py:attribute:: extra_config
      :annotation: :dict[str, Any]

      

   .. py:attribute:: aws_access_key_id
      :annotation: :str | None

      

   .. py:attribute:: aws_secret_access_key
      :annotation: :str | None

      

   .. py:attribute:: aws_session_token
      :annotation: :str | None

      

   .. py:attribute:: profile_name
      :annotation: :str | None

      

   .. py:attribute:: endpoint_url
      :annotation: :str | None

      

   .. py:attribute:: role_arn
      :annotation: :str | None

      

   .. py:attribute:: assume_role_method
      :annotation: :str | None

      

   .. py:attribute:: assume_role_kwargs
      :annotation: :dict[str, Any]

      

   .. py:method:: conn_repr()


   .. py:method:: __post_init__(conn)


   .. py:method:: from_connection_metadata(conn_id = None, login = None, password = None, extra = None)
      :classmethod:

      Create config from connection metadata.

      :param conn_id: Custom connection ID.
      :param login: AWS Access Key ID.
      :param password: AWS Secret Access Key.
      :param extra: Connection Extra metadata.


   .. py:method:: __bool__()



